Corrección de errores.Añadido prueba unitaria DAO.